Add progress watchdag

--- a/watchdag-cli/Makefile
+++ b/watchdag-cli/Makefile
@@ -2,3 +2,9 @@
 
 test:
 	RUST_LOG=debug cargo test
+
+test-property:
+	RUST_LOG=info cargo test -- --ignored
+
+test-all:
+	RUST_LOG=debug cargo test -- --include-ignored
