--- a/watchdag-cli/Cargo.toml
+++ b/watchdag-cli/Cargo.toml
@@ -3,8 +3,17 @@ name = "watchdag"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[workspace]
+members = ["crates/test-utils"]
+
+[workspace.dependencies]
 anyhow = "1.0.100"
+tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.43"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+
+[dependencies]
+anyhow = { workspace = true }
 blake3 = "1.8.2"
 clap = { version = "4.5.53", features = ["derive"] }
 globset = "0.4.18"
@@ -12,10 +21,13 @@ notify = "8.2.0"
 petgraph = "0.8.3"
 regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
-tokio = { version = "1.48.0", features = ["full"] }
+thiserror = "2.0.17"
+tokio = { workspace = true }
 toml = "0.9.8"
-tracing = "0.1.43"
-tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [dev-dependencies]
+proptest = "1.9.0"
 tempfile = "3"
+watchdag-test-utils = { path = "crates/test-utils" }
